tests/suite/snapshots/suite__check__tests__check__bad-unreachable1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-unreachable1.xi:8:5]
   │
 8 │     return 3
   ·     ────┬───  
   ·         ╰───── Unreachable statement
───╯

